--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/tinker": "^2.5",
         "nwidart/laravel-modules": "9.0.5",
         "spatie/laravel-medialibrary": "10.2.0",
+        "spatie/laravel-permission": "^5.9",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
