--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "ext-curl": "*",
+        "barryvdh/laravel-dompdf": "^2.0",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^9.0",
@@ -15,6 +17,8 @@
         "nwidart/laravel-modules": "9.0.5",
         "spatie/laravel-medialibrary": "10.2.0",
         "spatie/laravel-permission": "^5.9",
+        "spatie/laravel-translatable": "^6.3",
+        "stripe/stripe-php": "^10.8",
         "tymon/jwt-auth": "^1.0"
     },
     "require-dev": {
