--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.11",
         "laravel/socialite": "^5.6",
+        "laravel/telescope": "^4.14",
         "laravel/tinker": "^2.5",
         "nwidart/laravel-modules": "9.0.5",
         "spatie/laravel-medialibrary": "10.2.0",
