--- a/composer.json
+++ b/composer.json
@@ -13,9 +13,11 @@
         "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.5",
         "nwidart/laravel-modules": "9.0.5",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-medialibrary": "10.2.0",
         "spatie/laravel-permission": "^5.9",
-        "tymon/jwt-auth": "^1.0"
+        "tymon/jwt-auth": "^1.0",
+        "ext-http": "*"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
