--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "laravel/telescope": "^4.14",
         "laravel/tinker": "^2.5",
         "nwidart/laravel-modules": "9.0.5",
+        "pusher/pusher-php-server": "^7.2",
         "spatie/laravel-medialibrary": "10.2.0",
         "spatie/laravel-permission": "^5.9",
         "spatie/laravel-translatable": "^6.3",
