--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,9 @@
         "spatie/laravel-permission": "^5.9",
         "spatie/laravel-translatable": "^6.3",
         "stripe/stripe-php": "^10.8",
-        "tymon/jwt-auth": "^1.0"
+        "tomatophp/laravel-agora": "^1.0",
+        "tymon/jwt-auth": "^1.0",
+        "willywes/agora-sdk-php": "^0.1.3"
     },
     "require-dev": {
         "spatie/laravel-ignition": "^1.0",
